accept file for classpath element
git-svn-id: https://svn.apache.org/repos/asf/incubator/ivy/trunk@484325 13f79535-47bb-0310-9956-ffa450edef68